--- a/MangaBackend/NLog.config
+++ b/MangaBackend/NLog.config
@@ -10,7 +10,7 @@
     <target
       xsi:type="File"
       name="fileTarget"
-      fileName="../../../../logs/${shortdate}.log"
+      fileName="./logs/${shortdate}.log"
       layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}"
       />
   </targets>
