--- a/MangaBackend/Properties/launchSettings.json
+++ b/MangaBackend/Properties/launchSettings.json
@@ -22,6 +22,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://127.0.0.1:5001;http://127.0.0.1:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true,
+      "environmentVariables": {
+        "ASPNETCORE_DataOfCompipation": "8/24/2022 5:54:56 PM"
+      }
     }
   }
 }
