was added Relative path and flexible connection to database

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
     "LocalDatabaseMSSQL": "Server=(localdb)\\MSSQLLocalDB;Database=MangaDB;Trusted_Connection=True;TrustServerCertificate=True;",
-    "LocalDatabaseMYSQL": "server=127.0.0.1;user=manga;database=mangadb;password=2zBRlSdS6$#deslkfg2365cdff;port=3306"
+    "LocalDatabaseMYSQL": "server=127.0.0.1;user=manga;database=mangadb;password=Happymysql@123;port=3306"
+  },
+  "Others": {
+    "TypeOfConnection": "LocalDatabaseMSSQL",
+    "RelativePath": "https://s3.amazonaws.com/james.sergey.mangas/"
   },
   "Logging": {
     "LogLevel": {
