--- a/MangaBackend/NLog.config
+++ b/MangaBackend/NLog.config
@@ -4,13 +4,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   autoReload="true"
   internalLogLevel="Info"
-  internalLogFile="../logs/logs.txt">
+  internalLogFile="../../../../logs/logs.txt">
 
   <targets>
     <target
       xsi:type="File"
       name="fileTarget"
-      fileName="./logs/${shortdate}.log"
+      fileName="../../../../logs/${shortdate}.log"
       layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}"
       />
   </targets>
