--- a/MangaBackend/Properties/launchSettings.json
+++ b/MangaBackend/Properties/launchSettings.json
@@ -19,9 +19,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_DataOfCompipation": "9/2/2022 12:23:23 PM"
       },
-      "applicationUrl": "https://127.0.0.1:5001;http://127.0.0.1:5000"
+      "applicationUrl": "https://localhost:5000;http://localhost:5001"
     },
     "Docker": {
       "commandName": "Docker",
@@ -30,7 +31,7 @@
       "publishAllPorts": true,
       "useSSL": true,
       "environmentVariables": {
-        "ASPNETCORE_DataOfCompipation": "8/24/2022 5:54:56 PM"
+        "ASPNETCORE_DataOfCompipation": "9/2/2022 12:23:23 PM"
       }
     }
   }
