was added filler and the database can be filled

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -5,7 +5,7 @@
   },
   "Others": {
     "TypeOfConnection": "LocalDatabaseMSSQL",
-    "RelativePath": "https://s3.amazonaws.com/james.sergey.mangas/"
+    "RelativePath": "http://dvty-vinn-dev-app-0.dev-i.net/"
   },
   "Logging": {
     "LogLevel": {
