--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
+    <ProjectReference Include="..\ValidateService\ValidateService.csproj" />
   </ItemGroup>
 
 </Project>
