--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "TokenSettings": {
+    "Token": "SuperPuper secret key for the application"
+  },
   "ConnectionStrings": {
     "LocalDatabaseMSSQL": "Server=(localdb)\\MSSQLLocalDB;Database=MangaDB;Trusted_Connection=True;TrustServerCertificate=True;",
     "LocalDatabaseMYSQL": "server=127.0.0.1;user=manga;database=mangadb;password=Happymysql@123;port=3306"
