Email sender was added

--- a/MangaBackend/MangaBackend.csproj
+++ b/MangaBackend/MangaBackend.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\EmailService\EmailingService.csproj" />
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
     <ProjectReference Include="..\ValidateService\ValidateService.csproj" />
