sending emails was added

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -20,5 +20,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    "EmailConfiguration": {
+        "From": "askoakov.cisco@gmail.com",
+        "StmpServer": "smtp.gmail.com",
+        "Port": 465,
+        "Username": "askoakov.cisco@gmail.com",
+        "Password": "piohdocxnkeupuhe"
+    },
   "AllowedHosts": "*"
 }
