app url was extended to appsettings.json

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -20,12 +20,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "EmailConfiguration": {
-        "From": "askoakov.cisco@gmail.com",
-        "StmpServer": "smtp.gmail.com",
-        "Port": 465,
-        "Username": "askoakov.cisco@gmail.com",
-        "Password": "piohdocxnkeupuhe"
-    },
+  "EmailConfiguration": {
+    "From": "askoakov.cisco@gmail.com",
+    "StmpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "askoakov.cisco@gmail.com",
+    "Password": "piohdocxnkeupuhe"
+  },
+  "ApplicationSettings": {
+    "url": "https://localhost:5000"
+  },
   "AllowedHosts": "*"
 }
