emails smtp urk net updated

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -21,11 +21,11 @@
     }
   },
   "EmailConfiguration": {
-    "From": "askoakov.cisco@gmail.com",
-    "StmpServer": "smtp.gmail.com",
+    "From": "james.yasko@ukr.net",
+    "StmpServer": "smtp.ukr.net",
     "Port": 465,
-    "Username": "askoakov.cisco@gmail.com",
-    "Password": "piohdocxnkeupuhe"
+    "Username": "james.yasko@ukr.net",
+    "Password": "ovVevIYIM0UjUhRr"
   },
   "ApplicationSettings": {
     "url": "https://localhost:5000"
