--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\EmailService\EmailingService.csproj" />
+    <ProjectReference Include="..\Services.Core\Services.Core.csproj" />
     <ProjectReference Include="..\ValidateService\ValidateService.csproj" />
   </ItemGroup>
 
