--- a/WrapperService/WrapperService.csproj
+++ b/WrapperService/WrapperService.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
-    <ProjectReference Include="..\Services.Core\Services.Core.csproj" />
+    <ProjectReference Include="..\Services.Core\Services.Shared.csproj" />
   </ItemGroup>
 
 </Project>
