--- a/MangaBackend/MangaBackend.csproj
+++ b/MangaBackend/MangaBackend.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\EmailService\EmailingService.csproj" />
+    <ProjectReference Include="..\FileService\FileService.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
     <ProjectReference Include="..\ValidateService\ValidateService.csproj" />
     <ProjectReference Include="..\WrapperService\WrapperService.csproj" />
