was added name of server

--- a/MangaBackend/appsettings.json
+++ b/MangaBackend/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "SuperPuper secret key for the application"
   },
   "ConnectionStrings": {
-    "LocalDatabaseMSSQL": "Server=(localdb)\\MSSQLLocalDB;Database=MangaDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "LocalDatabaseMSSQL": "Server=DESKTOP-EL7FVD8;Database=MangaDB;Trusted_Connection=True;TrustServerCertificate=True;",
     "LocalDatabaseMYSQL": "server=127.0.0.1;user=manga;database=mangadb;password=Happymysql@123;port=3306"
   },
   "Others": {
