Enviroment for testing was set up

--- a/MangaApi/appsettings.json
+++ b/MangaApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "TokenSettings": {
+  "TokenConfiguration": {
     "Token": "SuperPuper secret key for the application"
   },
   "Others": {
@@ -22,8 +22,8 @@
     "Username": "james.yasko@ukr.net",
     "Password": "ovVevIYIM0UjUhRr"
   },
-  "ApplicationSettings": {
-    "url": "https://localhost:5038"
+  "ApplicationConfiguration": {
+    "AppUrl": "https://localhost:5038"
   },
   "AllowedHosts": "*"
 }
