configuration was added

--- a/MangaApi/appsettings.json
+++ b/MangaApi/appsettings.json
@@ -1,8 +1,14 @@
 {
+  "ConnectionStrings": {
+    "LocalDatabaseMSSQL": "Server=DESKTOP-EL7FVD8;Database=MangaDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "LocalDatabaseMYSQL": "server=127.0.0.1;user=manga;database=dbodb;password=2zBRlSdS6$#deslkfg2365cdff;port=3306"
+  },
   "TokenConfiguration": {
     "Token": "SuperPuper secret key for the application"
   },
   "Others": {
+    "IsUseEnviromentVariables": false,
+    "TypeOfConnection": "LocalDatabaseMSSQL",
     "RelativePath": "http://dvty-vinn-dev-app-0.dev-i.net/"
   },
   "FcmNotification": {
