GlavaMangaEntityViewModel and MangaViewModel were created

--- a/MangaApi/appsettings.json
+++ b/MangaApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Others": {
     "IsUseEnviromentVariables": false,
-    "TypeOfConnection": "LocalDatabaseMYSQL",
+    "TypeOfConnection": "LocalDatabaseMSSQL",
     "RelativePath": "http://dvty-vinn-dev-app-0.dev-i.net/"
   },
   "FcmNotification": {
