--- a/MangaApi/appsettings.json
+++ b/MangaApi/appsettings.json
@@ -9,7 +9,8 @@
   "Others": {
     "IsUseEnviromentVariables": false,
     "TypeOfConnection": "LocalDatabaseMSSQL",
-    "RelativePath": "http://dvty-vinn-dev-app-0.dev-i.net/"
+    "RelativePath": "http://dvty-vinn-dev-app-0.dev-i.net/",
+    "TemplatePath": "./Templates"
   },
   "FcmNotification": {
     "SenderId": "325033567238",
